--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -fexec-charset=gb2312")
 add_definitions(-D_UNICODE -DUNICODE)
 
 AUX_SOURCE_DIRECTORY(. SOURCE_FILES)
